fix: testing ci